# flexible_robots_simulation

./: .gitignore  README.md  cath_urdf_generator_with_controller.py  catheter_generator.py  ctr_generator.py
ctr_package/: CMakeLists.txt  README.md  package.xml
ctr_package/config/: rviz_config.rviz
ctr_package/launch/: ctr_display.launch.py  ctr_teleop.launch.py
ctr_package/meshes/: inner_segment.stl  inner_tube.stl  outer_tube.stl
ctr_package/urdf/: ctr.urdf.xacro
test_anatomy/: model.config  model.sdf
